--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "@astrojs/vercel": "^8.2.9",
     "astro": "^5.14.4"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.3.0"
   }
 }
