--- a/package.json
+++ b/package.json
@@ -1,18 +1,52 @@
 {
-  "name": "blog",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "bunx --bun astro dev",
-    "build": "bunx --bun astro build",
-    "preview": "bunx --bun astro preview",
-    "astro": "bunx --bun astro"
-  },
-  "dependencies": {
-    "@astrojs/vercel": "^8.2.9",
-    "astro": "^5.14.4"
-  },
-  "devDependencies": {
-    "@types/bun": "^1.3.0"
-  }
+	"name": "blog",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "bunx --bun astro dev",
+		"start": "bunx --bun astro dev",
+		"build": "bunx --bun astro check && astro build",
+		"preview": "bunx --bun astro preview",
+		"astro": "bunx --bun astro",
+		"lint": "bunx --bun eslint . --ext .js,.jsx,.ts,.tsx,.astro",
+		"lint:fix": "bunx --bun eslint . --ext .js,.jsx,.ts,.tsx,.astro --fix",
+		"format": "bunx --bun prettier --write .",
+		"format:check": "bunx --bun prettier --check ."
+	},
+	"dependencies": {
+		"@astrojs/check": "^0.9.4",
+		"@astrojs/mdx": "^4.3.7",
+		"@astrojs/rss": "^4.0.12",
+		"@astrojs/sitemap": "^3.6.0",
+		"@astrojs/vercel": "^8.2.9",
+		"@fontsource-variable/inter": "^5.2.8",
+		"@fontsource-variable/jetbrains-mono": "^5.2.8",
+		"@fontsource/silkscreen": "^5.2.8",
+		"@iconify-json/mdi": "^1.2.3",
+		"@tailwindcss/vite": "^4.1.14",
+		"astro": "^5.14.4",
+		"astro-icon": "^1.1.5",
+		"dayjs": "^1.11.18",
+		"mdast-util-to-string": "^4.0.0",
+		"reading-time": "^1.5.0",
+		"rehype-figure-title": "^1.0.0",
+		"tailwindcss": "^4.1.14",
+		"typescript": "^5.9.3"
+	},
+	"devDependencies": {
+		"@astrojs/partytown": "^2.1.4",
+		"@eslint/js": "^9.37.0",
+		"@tailwindcss/typography": "^0.5.19",
+		"@types/bun": "^1.3.0",
+		"@typescript-eslint/eslint-plugin": "^8.46.0",
+		"@typescript-eslint/parser": "^8.46.0",
+		"eslint": "^9.37.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-astro": "^1.3.1",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"prettier": "^3.6.2",
+		"prettier-plugin-astro": "^0.14.1",
+		"rehype-accessible-emojis": "^0.3.2",
+		"typescript-eslint": "^8.46.0"
+	}
 }
