--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/mdx": "^4.3.7",
-		"@astrojs/rss": "^4.0.12",
 		"@astrojs/sitemap": "^3.6.0",
 		"@astrojs/vercel": "^8.2.9",
 		"@fontsource-variable/inter": "^5.2.8",
@@ -31,7 +30,8 @@
 		"reading-time": "^1.5.0",
 		"rehype-figure-title": "^1.0.0",
 		"tailwindcss": "^4.1.14",
-		"typescript": "^5.9.3"
+		"typescript": "^5.9.3",
+		"unist-util-visit": "^5.0.0"
 	},
 	"devDependencies": {
 		"@astrojs/partytown": "^2.1.4",
