chore: add new Astro and font dependencies
Added @astrojs/rss, astro-og-canvas, and several @fontsource-variable packages to enhance RSS, Open Graph image generation, and font support. These updates improve site features and typography options.

--- a/package.json
+++ b/package.json
@@ -16,15 +16,22 @@
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/mdx": "^4.3.7",
+		"@astrojs/rss": "^4.0.13",
 		"@astrojs/sitemap": "^3.6.0",
 		"@astrojs/vercel": "^8.2.9",
+		"@fontsource-variable/cascadia-code": "^5.2.2",
+		"@fontsource-variable/eb-garamond": "^5.2.7",
 		"@fontsource-variable/inter": "^5.2.8",
 		"@fontsource-variable/jetbrains-mono": "^5.2.8",
+		"@fontsource-variable/merriweather": "^5.2.6",
+		"@fontsource-variable/rubik": "^5.2.8",
+		"@fontsource/monaspace-neon": "^5.2.5",
 		"@fontsource/silkscreen": "^5.2.8",
 		"@iconify-json/mdi": "^1.2.3",
 		"@tailwindcss/vite": "^4.1.14",
 		"astro": "^5.14.4",
 		"astro-icon": "^1.1.5",
+		"astro-og-canvas": "^0.7.2",
 		"dayjs": "^1.11.18",
 		"mdast-util-to-string": "^4.0.0",
 		"reading-time": "^1.5.0",
