feat: add Prettier plugins for imports and Tailwind CSS
Added 'prettier-plugin-organize-imports' and 'prettier-plugin-tailwindcss' to devDependencies and configured them in .prettierrc to improve import organization and Tailwind CSS formatting.

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,11 @@
 	"tabWidth": 2,
 	"trailingComma": "es5",
 	"printWidth": 80,
-	"plugins": ["prettier-plugin-astro"],
+	"plugins": [
+		"prettier-plugin-organize-imports",
+		"prettier-plugin-astro",
+		"prettier-plugin-tailwindcss"
+	],
 	"overrides": [
 		{
 			"files": "*.astro",
