--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
 		"format:check": "bunx --bun prettier --check ."
 	},
 	"dependencies": {
-		"@astrojs/check": "^0.9.4",
-		"@astrojs/mdx": "^4.3.7",
+		"@astrojs/check": "^0.9.5",
+		"@astrojs/mdx": "^4.3.10",
 		"@astrojs/rss": "^4.0.13",
 		"@astrojs/sitemap": "^3.6.0",
-		"@astrojs/vercel": "^8.2.9",
+		"@astrojs/vercel": "^9.0.0",
 		"@fontsource-variable/cascadia-code": "^5.2.2",
 		"@fontsource-variable/eb-garamond": "^5.2.7",
 		"@fontsource-variable/inter": "^5.2.8",
@@ -29,34 +29,36 @@
 		"@fontsource/monaspace-neon": "^5.2.5",
 		"@fontsource/silkscreen": "^5.2.8",
 		"@iconify-json/mdi": "^1.2.3",
-		"@tailwindcss/vite": "^4.1.14",
-		"astro": "^5.14.4",
+		"@tailwindcss/vite": "^4.1.17",
+		"astro": "^5.15.6",
 		"astro-icon": "^1.1.5",
 		"astro-og-canvas": "^0.7.2",
-		"dayjs": "^1.11.18",
+		"dayjs": "^1.11.19",
 		"dotenv": "^17.2.3",
 		"mdast-util-to-string": "^4.0.0",
 		"reading-time": "^1.5.0",
 		"rehype-figure-title": "^1.0.0",
-		"tailwindcss": "^4.1.14",
+		"rehype-katex": "^7.0.1",
+		"remark-math": "^6.0.0",
+		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
 		"unist-util-visit": "^5.0.0"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.37.0",
+		"@eslint/js": "^9.39.1",
 		"@tailwindcss/typography": "^0.5.19",
-		"@types/bun": "^1.3.0",
-		"@typescript-eslint/eslint-plugin": "^8.46.0",
-		"@typescript-eslint/parser": "^8.46.0",
-		"eslint": "^9.37.0",
+		"@types/bun": "^1.3.2",
+		"@typescript-eslint/eslint-plugin": "^8.46.4",
+		"@typescript-eslint/parser": "^8.46.4",
+		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-astro": "^1.3.1",
+		"eslint-plugin-astro": "^1.5.0",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"prettier": "^3.6.2",
 		"prettier-plugin-astro": "^0.14.1",
 		"prettier-plugin-organize-imports": "^4.3.0",
 		"prettier-plugin-tailwindcss": "^0.7.1",
 		"rehype-accessible-emojis": "^0.3.2",
-		"typescript-eslint": "^8.46.0"
+		"typescript-eslint": "^8.46.4"
 	}
 }
