--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"reading-time": "^1.5.0",
 		"rehype-figure-title": "^1.0.0",
 		"rehype-katex": "^7.0.1",
+		"remark-gfm": "^4.0.1",
 		"remark-math": "^6.0.0",
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
