--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@iconify-json/mdi": "^1.2.3",
 		"@tailwindcss/vite": "^4.1.17",
 		"astro": "^5.15.6",
+		"astro-embed": "^0.9.2",
 		"astro-icon": "^1.1.5",
 		"dayjs": "^1.11.19",
 		"dotenv": "^17.2.3",
