ci: update workflow 3

--- a/.github/workflows/indexing.yml
+++ b/.github/workflows/indexing.yml
@@ -11,13 +11,15 @@ jobs:
     if: github.repository == 'TeenBiscuits/Blog'
     runs-on: ubuntu-latest
     steps:
+      - name: ⌛ Espera 50s
+        run: sleep 50s
+        shell: bash
       - name: ⌛ Esperar deploy
         # tj-actions
         # MIT
         # https://github.com/tj-actions/vercel-wait
         uses: tj-actions/vercel-wait@v1.2.2
         with:
-          delay: '10'
           project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           token: ${{ secrets.VERCEL_TOKEN }}
           sha: ${{ github.sha }}
