--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@fontsource/silkscreen": "^5.2.8",
 		"@iconify-json/mdi": "^1.2.3",
 		"@tailwindcss/vite": "^4.1.17",
+		"@yeskunall/astro-umami": "^0.0.7",
 		"astro": "^5.15.6",
 		"astro-embed": "^0.9.2",
 		"astro-icon": "^1.1.5",
