--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"astro": "^5.15.6",
 		"astro-embed": "^0.9.2",
 		"astro-icon": "^1.1.5",
+		"astro-social-share": "^2.2.0",
 		"dayjs": "^1.11.19",
 		"dotenv": "^17.2.3",
 		"mdast-util-to-string": "^4.0.0",
