feat: add tailwind-animations
Add tailwind-animations to package.json and import it in global.css. Update components to use tailwind-animations utilities: BlogCard now uses a timeline/blurred fade-in class for entrance animation, and ProgressBar is simplified to a CSS-animated bar (removed the JS scroll listener and id-based width updates). These changes replace JS-driven progress animation with declarative Tailwind animation utilities for simpler, more performant UI behavior.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"rehype-katex": "^7.0.1",
 		"remark-gfm": "^4.0.1",
 		"remark-math": "^6.0.0",
+		"tailwind-animations": "^1.0.1",
 		"tailwindcss": "^4.1.18",
 		"typescript": "^5.9.3",
 		"unist-util-visit": "^5.1.0"
